Fix alignment of icons in sidebar

--- a/assets/sass/_config.scss
+++ b/assets/sass/_config.scss
@@ -5,7 +5,7 @@ $breakpoint-three-columns: 1200px !default;
 
 $sidebar-item-indent: 0.3rem;
 $sidebar-item-dialog-indent: 0.6rem;
-$sidebar-item-icon-width: 1.8rem;
+$sidebar-item-icon-width: 1.5rem;
 
 :root {
   --body-bg: #f8f9f8;
