--- a/assets/sass/pages/_logged-in.scss
+++ b/assets/sass/pages/_logged-in.scss
@@ -57,7 +57,6 @@ body.is-logged-in {
   }
 
   .sidebar__item__settings {
-    text-align: center;
     width: $sidebar-item-icon-width;
     position: absolute;
     left: 0;
